# ingestion-app/src/main/java/org/github/mcmetricscollector/database/sql/entities/UserEntity.java
@@ -1,0 +1,30 @@
+package org.github.mcmetricscollector.database.sql.entities;
+
+import jakarta.persistence.*;
+import jakarta.validation.constraints.NotNull;
+import lombok.Getter;
+import lombok.Setter;
+
+@Getter
+@Setter
+@Entity
+@Table(name = "users")
+public class UserEntity {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    @Column(name = "id", nullable = false)
+    private Long id;
+
+    @NotNull
+    @Column(name = "username", nullable = false, length = Integer.MAX_VALUE)
+    private String username;
+
+    @NotNull
+    @Column(name = "password", nullable = false, length = Integer.MAX_VALUE)
+    private String password;
+
+    @Column(name = "enabled")
+    private Boolean enabled;
+
+}
